# rstock

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  architecture.md  config.example.toml  docker-compose.yml
.github/workflows/: release.yml
crates/jobs/: Cargo.toml
crates/jobs/src/: api.rs  kline_frame.rs  lib.rs  models.rs  normalize.rs  sync_daily.rs  sync_minute.rs  tdx_source.rs
crates/jobs/src/patterns/: KHUNTER_PARITY.md  cache.rs  indicators.rs  mod.rs  model.rs  runner.rs
crates/jobs/src/patterns/detectors/: bottom_trend_inflection.rs  common.rs  immortal_guidance.rs  limit_up_pullback.rs  limit_up_sideways.rs  mod.rs  morning_star.rs  multi_golden_cross.rs  multi_party_cannon.rs  resistance_breakout.rs  strategy_2560_selection.rs  strong_wash_weak_to_strong.rs  trend_acceleration_inflection.rs  trend_resonance_reversal.rs  trend_start.rs  w_bottom.rs
crates/jobs/src/patterns/indicators/: engine.rs  math.rs  mod.rs  names.rs  spec.rs  tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: s3.rs
openspec/: config.yaml
openspec/schemas/backend/: schema.yaml
openspec/schemas/backend/templates/: design.md  proposal.md  spec.md  tasks.md
openspec/schemas/strategy/: schema.yaml
openspec/schemas/strategy/templates/: strategy.md  tasks.md
src/: import_daily.rs  import_minute.rs  lib.rs  main.rs  models.rs  normalize.rs  s3.rs  server.rs  swanlake.rs  sync_daily.rs  sync_minute.rs  tdx_source.rs  telemetry.rs
src/server/: app.rs  config.rs  errors.rs  feishu.rs  mod.rs  patterns.rs  tdx.rs  whole_quote.rs
tools/zip-csv-to-parquet/: Cargo.toml
tools/zip-csv-to-parquet/src/: common.rs  config.rs  daily.rs  index_daily.rs  main.rs  minute.rs  minute_s3.rs
