[package]
name = "rstock"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/storage",
    "crates/jobs",
    "tools/zip-csv-to-parquet",
    "vendor/qmt",
]

[[bin]]
name = "rstock"
path = "src/main.rs"

[dependencies]
anyhow = "1"
apalis = "0.7.4"
apalis-cron = "0.7.4"
async-nats = "0.38"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
storage = { package = "rstock-storage", path = "crates/storage" }
jobs = { package = "rstock-jobs", path = "crates/jobs", default-features = false }
qmt = { path = "vendor/qmt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.12", features = ["transport"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = ["tdx-fallback"]
tdx-fallback = ["jobs/tdx-fallback"]
