[package]
name = "rstock-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
home = "=0.5.9"
parquet = { version = "56", features = ["arrow"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
storage = { package = "rstock-storage", path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tdxrs = { path = "../../vendor/tdxrs", optional = true }
time = "=0.3.36"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["tdx-fallback"]
tdx-fallback = ["dep:tdxrs"]
