[package]
name = "rstock-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
duckdb = { version = "1", features = ["bundled"] }
home = "=0.5.9"
parquet = { version = "56", features = ["arrow"] }
polars = { version = "0.46", default-features = false, features = ["lazy", "fmt", "rolling_window", "strings"] }
qmt = { path = "../../vendor/qmt" }
storage = { package = "rstock-storage", path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tdxrs = { path = "../../vendor/tdxrs", optional = true }
time = "=0.3.36"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.12", features = ["transport"] }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["tdx-fallback"]
tdx-fallback = ["dep:tdxrs"]
