[package]
name = "zip-csv-to-parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
clap = { version = "4", features = ["derive"] }
csv = "1"
dotenvy = "0.15"
parquet = { version = "56", features = ["arrow"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
