[package]
name = "zip-csv-to-parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
parquet = { version = "56", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
storage = { package = "rstock-storage", path = "../../crates/storage" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
